--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -135,8 +135,12 @@
             "emailRequired": "البريد الإلكتروني مطلوب",
             "emailInvalid": "تنسيق البريد الإلكتروني غير صالح",
             "consultationRequired": "اختر نوع الاستشارة",
-            "messageMax": "يجب ألا تتجاوز الرسالة 500 حرف"
+            "messageMax": "يجب ألا تتجاوز الرسالة 500 حرف",
+            "privacyPolicyRequired": "يجب عليك الموافقة على سياسة الخصوصية"
         },
+        "privacyPolicyText": "لقد قرأت وأوافق على",
+        "privacyPolicyLink": "سياسة الخصوصية",
+        "privacyPolicyTextAfter": "",
         "recaptchaNotReady": "جاري تحميل فحص الأمان. يرجى الانتظار...",
         "recaptchaNotice": "هذا الموقع محمي بواسطة reCAPTCHA وتنطبق سياسة الخصوصية وشروط الخدمة من Google.",
         "email": {
