--- a/public/locales/ar/privacyPolicy.json
+++ b/public/locales/ar/privacyPolicy.json
@@ -1,27 +1,290 @@
 {
     "title": "سياسة الخصوصية",
-    "description": "سياسة الخصوصية وممارسات حماية البيانات",
-    "lastUpdated": "آخر تحديث: ديسمبر 2024",
+    "description": "سياسة الخصوصية وحماية البيانات الشخصية لعيادة د. سيرجي تونيتسكي",
+    "lastUpdated": "آخر تحديث: أكتوبر 2025",
     "sections": {
         "introduction": {
-            "title": "مقدمة",
-            "content": "تصف سياسة الخصوصية هذه كيفية جمع واستخدام وحماية ممارسة الدكتور سيرجي تونيتسكي الطبية لمعلوماتك الشخصية عند زيارة موقعنا الإلكتروني أو استخدام خدماتنا. نحن ملتزمون بحماية خصوصيتك وضمان أمان بياناتك الشخصية."
+            "title": "المقدمة",
+            "content": "عيادة د. سيرجي تونيتسكي الطبية (فيما يلي — 'نحن'، 'عيادتنا'، 'العيادة') ملتزمة بحماية سرية وأمن البيانات الشخصية لمرضانا وزوار الموقع.",
+            "regulations": "تصف سياسة الخصوصية هذه كيف نجمع ونستخدم ونعالج ونحمي معلوماتك وفقًا لـ:",
+            "regulation1": "قانون حماية الخصوصية الإسرائيلي",
+            "regulation2": "اللائحة العامة لحماية البيانات (GDPR)",
+            "regulation3": "المعايير الأخلاقية الطبية",
+            "agreement": "باستخدام موقعنا وخدماتنا، فإنك توافق على شروط هذه السياسة."
         },
         "dataCollection": {
-            "title": "المعلومات التي نجمعها",
-            "content": "نجمع المعلومات التي تقدمها لنا مباشرة، مثل عندما تطلب موعداً أو تتصل بنا أو تشترك في نشرتنا الإخبارية. قد يشمل ذلك اسمك وعنوان بريدك الإلكتروني ورقم هاتفك والمعلومات الطبية وأي معلومات أخرى تختار تقديمها."
+            "title": "البيانات التي نجمعها",
+            "direct": {
+                "title": "البيانات التي تقدمها مباشرة:",
+                "item1": "البيانات الشخصية: الاسم الأول، اسم العائلة، الهوية، معلومات الاتصال (الهاتف، البريد الإلكتروني، العنوان)",
+                "item2": "المعلومات الطبية: التاريخ الطبي، الأعراض، التشخيصات، نتائج الفحوصات، الصور الطبية",
+                "item3": "البيانات الديموغرافية: العمر، الجنس، الحالة الاجتماعية",
+                "item4": "البيانات المالية: معلومات الدفع مقابل الخدمات (عند إجراء المدفوعات)"
+            },
+            "automatic": {
+                "title": "البيانات المجمعة تلقائيًا:",
+                "item1": "البيانات التقنية: عنوان IP، نوع المتصفح، نظام التشغيل، بيانات الجهاز",
+                "item2": "بيانات الاستخدام: صفحات العرض، وقت الزيارة، سجل النشاط على الموقع",
+                "item3": "ملفات تعريف الارتباط والتقنيات المماثلة (انظر التفاصيل في القسم 5)"
+            },
+            "thirdParty": {
+                "title": "البيانات من أطراف ثالثة:",
+                "item1": "معلومات من مؤسسات طبية أخرى (بناءً على طلبك)",
+                "item2": "بيانات من شركات التأمين",
+                "item3": "معلومات الإحالة من الأطباء المحيلين"
+            }
         },
         "dataUsage": {
-            "title": "كيف نستخدم معلوماتك",
-            "content": "نستخدم المعلومات المجمعة لتقديم الخدمات الطبية وترتيب المواعيد والتواصل معك حول رعايتك وإرسال تحديثات مهمة حول خدماتنا وتحسين موقعنا الإلكتروني وخدماتنا. نحن لا نبيع أو نشارك معلوماتك الشخصية مع أطراف ثالثة دون موافقتك."
+            "title": "كيف نستخدم بياناتك",
+            "purposes": {
+                "title": "أغراض المعالجة الرئيسية:",
+                "content": "نستخدم بياناتك لتقديم الخدمات الطبية والعلاج، والاحتفاظ بالسجلات الطبية، وجدولة المواعيد وإدارة الجداول، والتواصل مع المرضى حول العلاج، وتحسين جودة الخدمات الطبية، والاتصالات التسويقية (بموافقتك)، والوفاء بالالتزامات القانونية."
+            },
+            "medical": {
+                "title": "معالجة البيانات الطبية:",
+                "content": "تتم معالجة البيانات الطبية المحمية بشكل خاص بناءً على:",
+                "basis1": "الموافقة الصريحة (المادة 9(2)(أ) من GDPR)",
+                "basis2": "تقديم الخدمات الطبية (المادة 9(2)(ح) من GDPR)",
+                "basis3": "حماية المصالح الحيوية (المادة 9(2)(ج) من GDPR)"
+            }
         },
-        "dataProtection": {
-            "title": "حماية البيانات",
-            "content": "نطبق تدابير أمنية مناسبة لحماية معلوماتك الشخصية من الوصول غير المصرح به أو التعديل أو الكشف أو التدمير. معلوماتك الطبية محمية وفقاً للقوانين واللوائح المعمول بها للخصوصية الطبية."
+        "dataSharing": {
+            "title": "مشاركة البيانات مع أطراف ثالثة",
+            "internal": {
+                "title": "المشاركة الداخلية:",
+                "content": "قد يتم مشاركة بياناتك بين موظفي عيادة د. سيرجي تونيتسكي حصريًا للأغراض الطبية وبالقدر اللازم لتقديم الخدمات."
+            },
+            "external": {
+                "title": "المتلقون الخارجيون:",
+                "content": "قد نشارك البيانات مع الفئات التالية من المتلقين:",
+                "category1": "المتخصصون الطبيون: الاستشاريون، المختبرات، مراكز التشخيص",
+                "category2": "مقدمو الخدمات التقنية: موفرو الاستضافة، دعم تكنولوجيا المعلومات",
+                "category3": "الخدمات الإدارية: المحاسبة، شركات التأمين",
+                "category4": "السلطات الحكومية: وفقًا للمتطلبات القانونية"
+            },
+            "international": {
+                "title": "النقل الدولي:",
+                "content": "يتم تخزين البيانات بشكل أساسي في إسرائيل. عند النقل إلى دول ثالثة، نضمن الحماية من خلال قرارات الاتحاد الأوروبي المناسبة، والبنود التعاقدية القياسية، وآليات الحماية المعتمدة."
+            }
+        },
+        "thirdPartyServices": {
+            "title": "خدمات الطرف الثالث المحددة",
+            "communication": {
+                "title": "خدمات الاتصالات والمراسلة:",
+                "whatsapp": "WhatsApp Business (Meta Platforms, Inc.) - استشارات عبر الإنترنت وحجز المواعيد",
+                "telegram": "Telegram Messenger (Telegram FZ-LLC) - التواصل مع المرضى",
+                "messenger": "Facebook Messenger (Meta Platforms, Inc.) - خدمة العملاء",
+                "viber": "Viber (Rakuten Viber) - اتصالات المراسلة",
+                "wechat": "WeChat (Tencent Holdings) - للمرضى الدوليين",
+                "line": "Line (LINE Corporation) - السوق الآسيوية",
+                "signal": "Signal (Signal Foundation) - اتصالات آمنة",
+                "slack": "Slack (Salesforce) - اتصالات داخلية للفريق"
+            },
+            "socialMedia": {
+                "title": "وسائل التواصل الاجتماعي والمنصات:",
+                "facebook": "Facebook (Meta Platforms, Inc.) - التسويق وجذب المرضى",
+                "instagram": "Instagram (Meta Platforms, Inc.) - التثقيف الطبي",
+                "youtube": "YouTube (Google LLC) - محتوى طبي تعليمي",
+                "linkedin": "LinkedIn (Microsoft Corporation) - اتصالات مهنية",
+                "twitter": "Twitter/X (X Corp.) - الأخبار والتحديثات",
+                "tiktok": "TikTok (ByteDance Ltd.) - محتوى طبي تعليمي",
+                "pinterest": "Pinterest (Pinterest Inc.) - محتوى طبي مرئي",
+                "reddit": "Reddit (Reddit Inc.) - المشاركة في المجتمعات الطبية"
+            },
+            "analytics": {
+                "title": "خدمات التحليلات:",
+                "googleAnalytics": "Google Analytics (Google LLC) - تحليلات الويب والإحصائيات",
+                "yandex": "Yandex.Metrika (Yandex LLC) - تحليل سلوك المستخدم",
+                "clarity": "Microsoft Clarity (Microsoft Corporation) - تسجيل الجلسات",
+                "hotjar": "Hotjar (Hotjar Ltd) - خرائط الحرارة وتحليل التفاعل",
+                "amplitude": "Amplitude (Amplitude Inc.) - تحليلات المنتج",
+                "mixpanel": "Mixpanel (Mixpanel Inc.) - تحليل رحلات المستخدم",
+                "adobe": "Adobe Analytics (Adobe Inc.) - تحليلات ويب متقدمة"
+            },
+            "marketing": {
+                "title": "خدمات التسويق والإعلان:",
+                "googleAds": "Google Ads (Google LLC) - الإعلانات السياقية وإعادة الاستهداف",
+                "fbPixel": "Facebook Pixel (Meta Platforms Inc.) - تتبع التحويلات",
+                "linkedinTag": "LinkedIn Insight Tag (Microsoft Corporation) - تحليل الجمهور",
+                "tiktokPixel": "TikTok Pixel (ByteDance Ltd.) - إعلانات TikTok",
+                "twitterPixel": "Twitter Pixel (X Corp.) - إعادة الاستهداف في Twitter/X",
+                "pinterestTag": "Pinterest Tag (Pinterest Inc.) - تتبع التحويلات",
+                "criteo": "Criteo (Criteo SA) - إعادة استهداف ديناميكية",
+                "googleMarketing": "Google Marketing Platform (Google LLC) - إدارة الحملات"
+            },
+            "technical": {
+                "title": "الخدمات التقنية والبنية التحتية:",
+                "gtm": "Google Tag Manager (Google LLC) - إدارة العلامات",
+                "cloudflare": "Cloudflare (Cloudflare Inc.) - CDN والأمان",
+                "vercel": "Vercel Analytics (Vercel Inc.) - مراقبة الأداء",
+                "sentry": "Sentry (Sentry Inc.) - مراقبة الأخطاء",
+                "newRelic": "New Relic (New Relic Inc.) - أداء التطبيقات",
+                "googleFonts": "Google Fonts (Google LLC) - خطوط الويب",
+                "fontAwesome": "Font Awesome (Fonticons Inc.) - الأيقونات والرسومات",
+                "workspace": "Google Workspace (Google LLC) - البريد والمستندات"
+            },
+            "crm": {
+                "title": "خدمات إدارة المحتوى و CRM:",
+                "hubspot": "HubSpot (HubSpot Inc.) - CRM وأتمتة التسويق",
+                "salesforce": "Salesforce (Salesforce Inc.) - إدارة علاقات العملاء",
+                "mailchimp": "Mailchimp (Intuit Inc.) - التسويق عبر البريد الإلكتروني",
+                "sendgrid": "SendGrid (Twilio Inc.) - رسائل بريد إلكتروني معاملات",
+                "calendly": "Calendly (Calendly LLC) - حجز المواعيد عبر الإنترنت",
+                "acuity": "Acuity Scheduling (Square Inc.) - إدارة الجدول الزمني",
+                "typeform": "Typeform (Typeform SL) - نماذج واستطلاعات عبر الإنترنت",
+                "jotform": "JotForm (JotForm Inc.) - إنشاء النماذج"
+            },
+            "payment": {
+                "title": "خدمات الدفع والمالية:",
+                "stripe": "Stripe (Stripe Inc.) - معالجة الدفع عبر الإنترنت",
+                "paypal": "PayPal (PayPal Holdings Inc.) - المدفوعات الإلكترونية",
+                "square": "Square (Square Inc.) - حلول الدفع",
+                "applePay": "Apple Pay (Apple Inc.) - المدفوعات عبر الهاتف المحمول",
+                "googlePay": "Google Pay (Google LLC) - المدفوعات عبر الهاتف المحمول"
+            },
+            "medical": {
+                "title": "الخدمات الطبية المتخصصة:",
+                "ehr": "Electronic Health Records systems - أنظمة السجلات الصحية الإلكترونية",
+                "imaging": "Medical imaging platforms - منصات التصوير الطبي",
+                "telemedicine": "Telemedicine platforms - منصات الطب عن بعد",
+                "billing": "Medical billing services - خدمات الفواتير الطبية"
+            },
+            "additional": {
+                "title": "خدمات محتملة إضافية:",
+                "zoom": "Zoom (Zoom Video Communications) - مؤتمرات الفيديو",
+                "teams": "Microsoft Teams (Microsoft Corporation) - الاتصالات المؤسسية",
+                "meet": "Google Meet (Google LLC) - اجتماعات الفيديو",
+                "dropbox": "Dropbox (Dropbox Inc.) - تخزين الملفات السحابية",
+                "drive": "Google Drive (Google LLC) - التخزين السحابي",
+                "onedrive": "OneDrive (Microsoft Corporation) - التخزين السحابي",
+                "notion": "Notion (Notion Labs Inc.) - إدارة المشاريع",
+                "trello": "Trello (Atlassian) - إدارة المهام"
+            },
+            "consent": {
+                "title": "إدارة الموافقة والامتثال:",
+                "onetrust": "OneTrust (OneTrust LLC) - إدارة موافقة ملفات تعريف الارتباط",
+                "cookiebot": "Cookiebot (Usercentrics A/S) - إدارة الموافقة",
+                "termly": "Termly (Termly Inc.) - مولد السياسات",
+                "iubenda": "iubenda (iubenda s.r.l.) - حلول قانونية للمواقع"
+            },
+            "internationalTransfer": {
+                "title": "نقل البيانات الدولية",
+                "content": "يرجى ملاحظة أن العديد من الخدمات المذكورة قد تقوم بتخزين ومعالجة البيانات خارج إسرائيل، بما في ذلك الولايات المتحدة الأمريكية ودول الاتحاد الأوروبي والولايات القضائية الأخرى. نضمن حماية بياناتك من خلال:",
+                "item1": "البنود التعاقدية القياسية للاتحاد الأوروبي",
+                "item2": "شهادات الامتثال للمعايير الدولية",
+                "item3": "اتفاقيات معالجة البيانات (DPAs)",
+                "item4": "مبادئ Privacy Shield (حيثما ينطبق)"
+            },
+            "consentManagement": {
+                "title": "إدارة الموافقة",
+                "content": "يمكنك تغيير تفضيلاتك المتعلقة باستخدام ملفات تعريف الارتباط والتتبع في أي وقت من خلال لوحة التحكم على موقعنا أو مباشرة في إعدادات المتصفح الخاص بك."
+            }
+        },
+        "cookies": {
+            "title": "ملفات تعريف الارتباط وتقنيات التتبع",
+            "essential": {
+                "title": "ملفات تعريف الارتباط الأساسية (الوظيفية):",
+                "item1": "ملفات تعريف ارتباط الجلسة لتشغيل الموقع",
+                "item2": "ملفات تعريف ارتباط الأمان",
+                "item3": "ملفات تعريف ارتباط سلة التسوق/حجز المواعيد"
+            },
+            "analytics": {
+                "title": "ملفات تعريف الارتباط التحليلية (تتطلب موافقة):",
+                "item1": "Google Analytics (بيانات مجهولة)",
+                "item2": "تحليل سلوك المستخدم",
+                "item3": "إحصائيات الزيارة"
+            },
+            "marketing": {
+                "title": "ملفات تعريف الارتباط التسويقية (تتطلب موافقة صريحة):",
+                "item1": "تقنيات إعادة الاستهداف",
+                "item2": "بيكسلات وسائل التواصل الاجتماعي",
+                "item3": "منصات الإعلان"
+            },
+            "control": "يمكنك إدارة إعدادات ملفات تعريف الارتباط من خلال لوحة التحكم على موقعنا."
+        },
+        "security": {
+            "title": "أمن البيانات",
+            "intro": "نطبق تدابير أمنية شاملة لحماية بياناتك:",
+            "technical": {
+                "title": "التدابير التقنية:",
+                "item1": "تشفير البيانات أثناء النقل (SSL/TLS)",
+                "item2": "خوادم آمنة ذات وصول محدود",
+                "item3": "النسخ الاحتياطي المنتظم",
+                "item4": "مراقبة الأمان على مدار الساعة طوال أيام الأسبوع"
+            },
+            "organizational": {
+                "title": "التدابير التنظيمية:",
+                "item1": "التوقيع على اتفاقيات السرية مع الموظفين",
+                "item2": "تقييد الوصول إلى السجلات الطبية على أساس 'الحاجة إلى المعرفة'",
+                "item3": "التدريب المنتظم للموظفين على حماية البيانات",
+                "item4": "عمليات تدقيق أمنية دورية"
+            },
+            "medical": {
+                "title": "السرية الطبية:",
+                "content": "السجلات الطبية محمية وفقًا لقانون حقوق المريض الإسرائيلي، والأخلاقيات الطبية، وبروتوكولات السرية الداخلية."
+            }
+        },
+        "retention": {
+            "title": "فترات الاحتفاظ بالبيانات",
+            "intro": "نحتفظببياناتك فقط للفترة الضرورية:",
+            "medical": {
+                "title": "السجلات الطبية:",
+                "item1": "7 سنوات من تاريخ آخر زيارة (متطلب قانوني إسرائيلي)",
+                "item2": "للقصر — حتى سن 25",
+                "item3": "وثائق طبية معينة — بشكل دائم"
+            },
+            "personal": {
+                "title": "البيانات الشخصية:",
+                "item1": "حتى سحب الموافقة أو 3 سنوات من عدم النشاط",
+                "item2": "بيانات التسويق — حتى سحب الموافقة"
+            },
+            "technical": {
+                "title": "البيانات التقنية:",
+                "item1": "ملفات تعريف الارتباط — حتى 24 شهرًا",
+                "item2": "سجلات الخادم — حتى 12 شهرًا"
+            }
+        },
+        "rights": {
+            "title": "حقوقك",
+            "intro": "وفقًا للائحة العامة لحماية البيانات والتشريعات الإسرائيلية، لديك الحق في:",
+            "basic": {
+                "title": "الحقوق الأساسية:",
+                "item1": "الحق في الوصول — الحصول على نسخة من بياناتك",
+                "item2": "الحق في التصحيح — تحديث البيانات غير الدقيقة",
+                "item3": "الحق في المحو — طلب حذف البيانات ('الحق في النسيان')",
+                "item4": "الحق في النقل — تلقي البيانات بتنسيق قابل للقراءة آليًا"
+            },
+            "additional": {
+                "title": "الحقوق الإضافية:",
+                "item1": "الحق في تقييد المعالجة — تعليق المعالجة مؤقتًا",
+                "item2": "الحق في الاعتراض — على المعالجة لأغراض التسويق",
+                "item3": "الحق في سحب الموافقة — في أي وقت دون عواقب",
+                "item4": "الحق في التدخل البشري — في اتخاذ القرارات الآلية"
+            },
+            "procedure": {
+                "title": "إجراءات ممارسة الحقوق:",
+                "content": "لممارسة حقوقك، اتصل بمسؤول حماية البيانات لدينا (تفاصيل الاتصال أدناه). سنرد خلال 30 يومًا."
+            }
         },
         "contact": {
-            "title": "اتصل بنا",
-            "content": "إذا كان لديك أسئلة حول سياسة الخصوصية هذه أو ممارساتنا مع البيانات، يرجى الاتصال بنا على عنوان عيادتنا أو من خلال نموذج الاتصال على موقعنا الإلكتروني."
+            "title": "جهات الاتصال والمسؤولية",
+            "controller": "مراقب البيانات:"
+        },
+        "changes": {
+            "title": "تغييرات السياسة",
+            "intro": "قد نقوم بتحديث سياسة الخصوصية هذه. سنخطرك بالتغييرات الهامة من خلال:",
+            "method1": "البريد الإلكتروني (للمرضى الحاليين)",
+            "method2": "إشعار على الموقع",
+            "method3": "لافتة عند دخول الموقع",
+            "effective": "تدخل التغييرات حيز التنفيذ بعد 30 يومًا من النشر."
+        },
+        "legal": {
+            "title": "المعلومات القانونية",
+            "content": "تخضع هذه السياسة لقوانين دولة إسرائيل. جميع النزاعات تخضع للحل في المحاكم الإسرائيلية."
         }
+    },
+    "footer": {
+        "effective": "ساري المفعول من: أكتوبر 2025",
+        "version": "الإصدار: 2.0 متوافق مع GDPR"
     }
 }
