--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -135,8 +135,12 @@
       "emailRequired": "L'e-mail est obligatoire",
       "emailInvalid": "Format d'e-mail invalide",
       "consultationRequired": "Veuillez sélectionner le type de consultation",
-      "messageMax": "Le message ne doit pas dépasser 500 caractères"
+      "messageMax": "Le message ne doit pas dépasser 500 caractères",
+      "privacyPolicyRequired": "Vous devez accepter la Politique de Confidentialité"
     },
+    "privacyPolicyText": "J'ai lu et j'accepte la",
+    "privacyPolicyLink": "Politique de Confidentialité",
+    "privacyPolicyTextAfter": "",
     "recaptchaNotReady": "Chargement de la vérification de sécurité. Veuillez patienter...",
     "recaptchaNotice": "Ce site est protégé par reCAPTCHA et les Règles de confidentialité et Conditions d'utilisation de Google s'appliquent.",
     "email": {
